👌 Solve z-index issue

--- a/src/styles/components/Log.scss
+++ b/src/styles/components/Log.scss
@@ -10,6 +10,7 @@
   width: 100%;
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
+  z-index: 20;
 }
 
 .log {
@@ -21,7 +22,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 10000000000000000;
+  z-index: 30;
   padding: 30px;
   gap: 30px;
   border-radius: 7px;
